# rollyourownmemory

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  claude-recall  curate.py  curated-facts.example.md  distill.py  embed.py  entities.py  ingest.py  inject.py  mcp_server.py  pyproject.toml  schema.sql
.factory/: init.sh  services.yaml
.factory/skills/ingest-worker/: SKILL.md
.factory/skills/memory-worker/: SKILL.md
.factory/skills/python-worker/: SKILL.md
.factory/skills/web-worker/: SKILL.md
.factory/validation/advanced-features/scrutiny/: synthesis.json
.factory/validation/advanced-features/user-testing/: synthesis.json
.factory/validation/curation-and-context/scrutiny/: synthesis.json
.factory/validation/curation-and-context/user-testing/: synthesis.json
.factory/validation/distill-and-schema/scrutiny/: synthesis.json
.factory/validation/distill-and-schema/user-testing/: synthesis.json
.factory/validation/fact-embeddings/scrutiny/: synthesis.json
.factory/validation/fact-embeddings/user-testing/: synthesis.json
.factory/validation/features/scrutiny/: synthesis.json
.factory/validation/features/user-testing/: synthesis.json
hooks/: memory-hook.sh
src/: claude_recall.py  config.py  curate.py  distill.py  embed.py  entities.py  ingest.py  inject.py  mcp_server.py  memory_db.py  web.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_fact_embeddings.py  test_ingest.py  test_inject.py  test_mcp_server.py  test_memory_db.py  test_model_registry.py  test_segmentation.py  test_web.py
(+98 files in other folders)
